<resources>
    <string name="app_name" translatable="false">Arabic Keyboard</string>
    <string name="image" translatable="false">image</string>
    <string name="ad_attribution">AD</string>
    <string name="telugu_voice_keyboard">Telugu voice keyboard</string>
    <string name="add_english_typing_in_your_settings">Add english typing in your settings</string>
    <string name="done_text1">Now if you want to disable Telegu voice Typing Switch input Method.</string>
    <string name="done_text2">Congratulation now you can type text messages email with Telegu voice typing keyboard</string>
    <string name="activeTxtStr">Now, Select Telugu as a input Method</string>
    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>
    <string name="key_popup__threedots_alt" comment="Content description for the three-dots icon in a key popup">Three-dot icon. If visible, indicates that more letters can be used if longer pressed.</string>
    <string name="one_handed__close_btn_content_description" comment="Content description for the one-handed close button">Close one-handed mode.</string>
    <string name="one_handed__move_start_btn_content_description" comment="Content description for the one-handed move to left button">Move keyboard to the left.</string>
    <string name="one_handed__move_end_btn_content_description" comment="Content description for the one-handed move to right button">Move keyboard to the right.</string>
    <string name="enter_text_to_translate">Enter text to translate</string>
    <string name="media__tab__emojis" comment="Tab description for emojis in the media UI">Emojis</string>
    <string name="media__tab__emoticons" comment="Tab description for emoticons in the media UI">Emoticons</string>
    <string name="media__tab__kaomoji" comment="Tab description for kaomoji in the media UI">Kaomoji</string>
    <string name="emoji__category__smileys_emotion" comment="Emoji category name">Smileys &amp; Emotions</string>
    <string name="emoji__category__people_body" comment="Emoji category name">People &amp; Body</string>
    <string name="emoji__category__animals_nature" comment="Emoji category name">Animals &amp; Nature</string>
    <string name="emoji__category__food_drink" comment="Emoji category name">Food &amp; Drink</string>
    <string name="emoji__category__travel_places" comment="Emoji category name">Travel &amp; Places</string>
    <string name="emoji__category__activities" comment="Emoji category name">Activities</string>
    <string name="emoji__category__objects" comment="Emoji category name">Objects</string>
    <string name="emoji__category__symbols" comment="Emoji category name">Symbols</string>
    <string name="emoji__category__flags" comment="Emoji category name">Flags</string>
    <string name="smartbar__quick_action_toggle__alt" comment="Content description for the quick action toggle button in Smartbar">Quick action toggle. If pressed, toggles between the word suggestions and the quick action buttons.</string>
    <string name="smartbar__quick_action__exit_editing" comment="Content-description for the exit editing layout button in Smartbar">Exit text editing panel.</string>
    <string name="smartbar__quick_action__one_handed_mode" comment="Content-description for the one-handed quick action in Smartbar">Toggle the state of the one-handed mode.</string>
    <string name="smartbar__quick_action__open_settings" comment="Content-description for the settings quick action in Smartbar">Open settings.</string>
    <string name="smartbar__quick_action__switch_to_editing_context" comment="Content-description for the editing quick action in Smartbar">Switch to text editing panel.</string>
    <string name="smartbar__quick_action__switch_to_media_context" comment="Content-description for the media quick action in Smartbar">Switch to media input view.</string>
    <string name="smartbar__mic_context" comment="Content-description for the mic">Switch to media input view.</string>
    <string name="settings__title" comment="Title of Settings">Settings</string>
    <string name="settings__menu" comment="Hint of top-right three-dot icon in Settings">More options</string>
    <string name="settings__menu_about" translatable="false" comment="Three-dot menu entry for About activity">@string/about__title</string>
    <string name="settings__menu_advanced" translatable="false" comment="Three-dot menu entry for Advanced activity">@string/settings__advanced__title</string>
    <string name="settings__menu_help" comment="Three-dot menu entry for Help and Feedback web link">Help &amp; feedback</string>
    <string name="settings__navigation__home" comment="Long-press hint of bottom nav item Home in Settings">Home</string>
    <string name="settings__navigation__keyboard" comment="Long-press hint of bottom nav item Keyboard in Settings">Keyboard</string>
    <string name="settings__navigation__typing" comment="Long-press hint of bottom nav item Typing in Settings">Typing</string>
    <string name="settings__navigation__theme" comment="Long-press hint of bottom nav item Theme in Settings">Theme</string>
    <string name="settings__navigation__gestures" comment="Long-press hint of bottom nav item Gestures in Settings">Gestures</string>
    <string name="settings__default" comment="General string which is used when a preference has the default value set">Default</string>
    <string name="settings__system_default" comment="General string which is used when a preference has the system default value set">System default</string>
    <string name="settings__home__title" comment="Title of the Home fragment">Welcome to %s</string>
    <string name="settings__home__ime_not_enabled" comment="Error message shown in Home fragment when FlorisBoard is not enabled in the system">FlorisBoard is not enabled in the system and thus won\'t be available as an input method in the input picker. Click here to resolve this issue.</string>
    <string name="settings__home__ime_not_selected" comment="Warning message shown in Home fragment when FlorisBoard is not selected as the default keyboard">FlorisBoard is not selected as the default input method. Click here to resolve this issue.</string>
    <string name="settings__home__contribute" comment="Contributing message shown in Home fragment">Thanks for trying out FlorisBoard! This project is still in alpha and therefore missing features. If you find any bugs or want to make a suggestion, please check out the repo on GitHub and file an issue. This helps making FlorisBoard better. Thank you!</string>
    <string name="settings__localization__title" comment="Title of languages and layout box in the Typing fragment">Languages &amp; Keyboard layouts</string>
    <string name="settings__localization__subtype_no_subtypes_configured_warning" comment="Warning message that no subtype has been defined in the Typing fragment">It seems that you haven\'t configured any subtypes. As a fallback the subtype English/QWERTY will be used!</string>
    <string name="settings__localization__subtype_add" comment="Subtype dialog add button">Add</string>
    <string name="settings__localization__subtype_add_title" comment="Title of subtype dialog when adding a new subtype">Add subtype</string>
    <string name="settings__localization__subtype_apply" comment="Subtype dialog apply button">Apply</string>
    <string name="settings__localization__subtype_cancel" comment="Subtype dialog cancel button">Cancel</string>
    <string name="settings__localization__subtype_delete" comment="Subtype dialog delete button">Delete</string>
    <string name="settings__localization__subtype_edit_title" comment="Title of subtype dialog when editing an existing subtype">Edit subtype</string>
    <string name="settings__localization__subtype_locale" comment="Label for locale dropdown in subtype dialog">Locale</string>
    <string name="settings__localization__subtype_layout" comment="Label for keyboard layout dropdown in subtype dialog">Keyboard layout</string>
    <string name="settings__localization__subtype_error_already_exists" comment="Error message shown in subtype dialog when a subtype to add already exists">This subtype already exists!</string>
    <string name="settings__theme__title" comment="Title of the Theme fragment">Keyboard theme</string>
    <string name="settings__theme__undefined" comment="General string for an undefined preference value">Undefined</string>
    <string name="settings__theme__preset_title" comment="Label of the theme preset preference">Theme</string>
    <string name="settings__theme__preset_summary" comment="Summary of the theme preset preference">Custom (based on %s)</string>
    <string name="settings__theme__preset_dialog_selected_theme" comment="Label of the selected themes list">Selected theme:</string>
    <string name="settings__theme__preset_dialog_available_themes" comment="Label of the available themes list">Available themes:</string>
    <string name="settings__theme__preset_dialog_alt_arrow_right" comment="Content description of the theme selection button in theme dialog">Arrow right</string>
    <string name="settings__theme__background" comment="General label for a background preference">Background color</string>
    <string name="settings__theme__background_active" comment="General label for an active background preference">Background color when active</string>
    <string name="settings__theme__background_pressed" comment="General label for a pressed background preference">Background color when pressed</string>
    <string name="settings__theme__foreground" comment="General label for a foreground preference">Foreground color</string>
    <string name="settings__theme__foreground_alt" comment="General label for an alternate foreground preference">Foreground color (alternative)</string>
    <string name="settings__theme__foreground_capslock" comment="General label for a capslock foreground preference">Foreground color (caps lock)</string>
    <string name="settings__theme__dialog_title" comment="Title of the color selection dialog for a single theme preference">Select a color</string>
    <string name="settings__theme__group_window" comment="Theme group label">Window &amp; System</string>
    <string name="settings__theme__group_keyboard" comment="Theme group label">Keyboard</string>
    <string name="settings__theme__group_key" comment="Theme group label">Key</string>
    <string name="settings__theme__group_key_enter" comment="Theme group label">Enter key</string>
    <string name="settings__theme__group_key_popup" comment="Theme group label">Key popup</string>
    <string name="settings__theme__group_key_shift" comment="Theme group label">Shift key</string>
    <string name="settings__theme__group_media" comment="Theme group label">Media context</string>
    <string name="settings__theme__group_one_handed" comment="Theme group label">One-handed</string>
    <string name="settings__theme__group_one_handed_button" comment="Theme group label">One-handed button</string>
    <string name="settings__theme__group_smartbar" comment="Theme group label">Smartbar</string>
    <string name="settings__theme__group_smartbar_button" comment="Theme group label">Smartbar button</string>
    <string name="pref__theme__colorPrimary_title" comment="Title of Color primary theme preference">Primary color</string>
    <string name="pref__theme__colorPrimary_summary" comment="Summary of Color primary theme preference">Applied to main media tab ripple and selection highlight</string>
    <string name="pref__theme__colorPrimaryDark_title" comment="Title of Color primary dark theme preference">Primary color (dark)</string>
</resources>