<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp">

    <dev.patrickgold.florisboard.ime.core.FlorisViewFlipper
        android:id="@+id/action_start_area"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/quick_action_switch_to_media_context"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quick_action_switch_to_media_context">

        <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
            android:id="@+id/quick_action_toggle"
            style="@style/SmartbarQuickAction.Toggle"
            android:contentDescription="@string/smartbar__quick_action_toggle__alt"
            android:src="@drawable/ic_keyboard_arrow_right" />

        <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
            android:id="@+id/back_button"
            style="@style/SmartbarQuickAction"
            android:contentDescription="@string/smartbar__quick_action__exit_editing"
            android:src="@drawable/ic_arrow_back" />

    </dev.patrickgold.florisboard.ime.core.FlorisViewFlipper>

    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/voice_translation"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__quick_action__switch_to_media_context"
        android:src="@drawable/ic_keyboard_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quick_action_theme"
        app:layout_constraintTop_toTopOf="parent" />

    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/quick_action_switch_to_media_context"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__quick_action__switch_to_media_context"
        android:src="@drawable/ic_keyboard_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_start_area"
        app:layout_constraintTop_toTopOf="parent" />

    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/quick_action_switch_keyboard"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__mic_context"
        android:src="@drawable/ic_keyboard_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quick_action_switch_to_media_context"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- TODO: find better icon for one-handed mode -->
    <!--            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton-->
    <!--                android:id="@+id/quick_action_one_handed_toggle"-->
    <!--                style="@style/SmartbarQuickAction"-->
    <!--                android:visibility="gone"-->
    <!--                android:contentDescription="@string/smartbar__quick_action__one_handed_mode"-->
    <!--                android:src="@drawable/ic_smartphone"/>-->

    <!-- TODO: find better icon for editing -->
    <!--            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton-->
    <!--                android:id="@+id/quick_action_switch_to_editing_context"-->
    <!--                style="@style/SmartbarQuickAction"-->
    <!--                android:visibility="gone"-->
    <!--                android:contentDescription="@string/smartbar__quick_action__switch_to_editing_context"-->
    <!--                android:src="@drawable/ic_format_italic"/>-->
    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/quick_action_mic"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__mic_context"
        android:src="@drawable/ic_kb_mic_listening"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/voice_translation"
        app:layout_constraintStart_toEndOf="@+id/quick_action_switch_keyboard"
        app:layout_constraintTop_toTopOf="parent" />

    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/quick_action_theme"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__mic_context"
        android:src="@drawable/ic_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
        android:id="@+id/quick_action_text_translation"
        style="@style/SmartbarQuickActions"
        android:contentDescription="@string/smartbar__quick_action__open_settings"
        android:src="@drawable/ic_translation_btn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
