<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_260sdp"
        android:layout_margin="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/activiy_ad_frame"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_260sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.cardview.widget.CardView>

<!--    <ImageView-->
<!--        android:id="@+id/mainLogo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="@dimen/_260sdp"-->
<!--        android:background="@drawable/ic_illustration_logo"-->
<!--        android:contentDescription="@string/image"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <ImageView
        android:id="@+id/mainCardIv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_card_content"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/addBtn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="15dp"
        android:background="@drawable/add_btn"
        android:contentDescription="@string/image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTextTv" />

    <TextView
        android:id="@+id/addTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telugu_voice_keyboard"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainCardIv"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/addTextTv"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_english_typing_in_your_settings"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitleTv" />

    <TextView
        android:id="@+id/doneTextTv"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/done_text1"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainCardIv" />

    <ImageButton
        android:id="@+id/disableBtn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="15dp"
        android:background="@drawable/disable_btn"
        android:contentDescription="@string/image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneTextTv" />

    <TextView
        android:id="@+id/doneTextTv2"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/done_text2"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disableBtn" />

    <ImageButton
        android:id="@+id/doneBtn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="15dp"
        android:background="@drawable/done_btn"
        android:contentDescription="@string/image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneTextTv2" />

<!--    <RelativeLayout-->
<!--        android:id="@+id/relativeLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/banner_ad_height"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->
<!--        <FrameLayout-->
<!--            android:id="@+id/banner_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:orientation="vertical" />-->
<!--    </RelativeLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>